// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CopyPullSecret /> with error link-inplace should render 1`] = `
<CopyToClipboard
  onCopy={[Function]}
  text=""
>
  <Button
    icon={
      <CopyIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    }
    isDisabled={true}
    onClick={[Function]}
    tabIndex={0}
    type="button"
    variant="link"
  >
    Copy pull secret
  </Button>
</CopyToClipboard>
`;

exports[`<CopyPullSecret /> with error link-tooltip should render 1`] = `
<Tooltip
  content="Copied!"
  isVisible={false}
  position="right"
  trigger="manual"
>
  <CopyToClipboard
    onCopy={[Function]}
    text=""
  >
    <Button
      icon={
        <CopyIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={true}
      onClick={[Function]}
      tabIndex={0}
      type="button"
      variant="link"
    >
      Copy pull secret
    </Button>
  </CopyToClipboard>
</Tooltip>
`;

exports[`<CopyPullSecret /> with token link-inplace should render 1`] = `
<CopyToClipboard
  onCopy={[Function]}
  text="{\\"auths\\":{\\"foo\\":\\"bar\\"}}
"
>
  <Button
    icon={
      <CopyIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    }
    isDisabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
    variant="link"
  >
    Copy pull secret
  </Button>
</CopyToClipboard>
`;

exports[`<CopyPullSecret /> with token link-tooltip should render 1`] = `
<Tooltip
  content="Copied!"
  isVisible={false}
  position="right"
  trigger="manual"
>
  <CopyToClipboard
    onCopy={[Function]}
    text="{\\"auths\\":{\\"foo\\":\\"bar\\"}}
"
  >
    <Button
      icon={
        <CopyIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
      isDisabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
      variant="link"
    >
      Copy pull secret
    </Button>
  </CopyToClipboard>
</Tooltip>
`;
